Engine/Data/out/zig/phrost.zig


pub const PackedScriptSubscribeEvent = extern struct {
    channelNo: u32, // Channel number to start receiving events from.
    _padding: u32, // Padding for alignment.
};

pub const PackedScriptUnsubscribeEvent = extern struct {
    channelNo: u32, // Channel number to stop receiving events from.
    _padding: u32, // Padding for alignment.
};

pub const PackedSpriteAddEvent = extern struct {
    id1: i64, // Primary identifier (e.g., entity ID).
    id2: i64, // Secondary identifier (e.g., component ID).
    positionX: f64, // Initial X position.
    positionY: f64, // Initial Y position.
    positionZ: f64, // Initial Z position (depth).
    scaleX: f64, // Initial X scale.
    scaleY: f64, // Initial Y scale.
    scaleZ: f64, // Initial Z scale.
    sizeW: f64, // Initial width.
    sizeH: f64, // Initial height.
    rotationX: f64, // Initial X rotation (in radians).
    rotationY: f64, // Initial Y rotation (in radians).
    rotationZ: f64, // Initial Z rotation (in radians).
    r: u8, // Red color component (0-255).
    g: u8, // Green color component (0-255).
    b: u8, // Blue color component (0-255).
    a: u8, // Alpha color component (0-255).
    _padding: u32, // Ensures 8-byte alignment for speeds.
    speedX: f64, // Initial X speed.
    speedY: f64, // Initial Y speed.
};

pub const PackedSpriteColorEvent = extern struct {
    id1: i64, // Primary ID of the sprite.
    id2: i64, // Secondary ID of the sprite.
    r: u8, // New red component (0-255).
    g: u8, // New green component (0-255).
    b: u8, // New blue component (0-255).
    a: u8, // New alpha component (0-255).
    _padding: u32, // Padding for alignment.
};

pub const PackedSpriteMoveEvent = extern struct {
    id1: i64, // Primary ID of the sprite.
    id2: i64, // Secondary ID of the sprite.
    positionX: f64, // New X position.
    positionY: f64, // New Y position.
    positionZ: f64, // New Z position (depth).
};

pub const PackedSpriteRemoveEvent = extern struct {
    id1: i64, // Primary ID of sprite to remove.
    id2: i64, // Secondary ID of sprite to remove.
};

pub const PackedSpriteResizeEvent = extern struct {
    id1: i64, // Primary ID of the sprite.
    id2: i64, // Secondary ID of the sprite.
    sizeW: f64, // New width.
    sizeH: f64, // New height.
};

pub const PackedSpriteRotateEvent = extern struct {
    id1: i64, // Primary ID of the sprite.
    id2: i64, // Secondary ID of the sprite.
    rotationX: f64, // New X rotation (in radians).
    rotationY: f64, // New Y rotation (in radians).
    rotationZ: f64, // New Z rotation (in radians).
};

pub const PackedSpriteScaleEvent = extern struct {
    id1: i64, // Primary ID of the sprite.
    id2: i64, // Secondary ID of the sprite.
    scaleX: f64, // New X scale.
    scaleY: f64, // New Y scale.
    scaleZ: f64, // New Z scale.
};

pub const PackedSpriteSetSourceRectEvent = extern struct {
    id1: i64, // Primary ID of the sprite.
    id2: i64, // Secondary ID of the sprite.
    x: f32, // Source rect X coordinate.
    y: f32, // Source rect Y coordinate.
    w: f32, // Source rect Width.
    h: f32, // Source rect Height.
};

pub const PackedSpriteSpeedEvent = extern struct {
    id1: i64, // Primary ID of the sprite.
    id2: i64, // Secondary ID of the sprite.
    speedX: f64, // New X speed.
    speedY: f64, // New Y speed.
};

pub const PackedSpriteTextureSetEvent = extern struct {
    id1: i64, // Primary ID of the sprite.
    id2: i64, // Secondary ID of the sprite.
    textureId: u64, // The ID of the loaded texture to set.
};

pub const PackedTextAddEvent = extern struct {
    id1: i64, // Primary identifier.
    id2: i64, // Secondary identifier.
    positionX: f64, // Initial X position.
    positionY: f64, // Initial Y position.
    positionZ: f64, // Initial Z position (depth).
    r: u8, // Red color component (0-255).
    g: u8, // Green color component (0-255).
    b: u8, // Blue color component (0-255).
    a: u8, // Alpha color component (0-255).
    _padding1: u32, // Padding for alignment.
    fontSize: f32, // Font size.
    fontPathLength: u32, // Length of the font path string that follows.
    textLength: u32, // Length of the initial text string that follows.
    _padding2: u32, // Padding.
};

pub const PackedTextSetStringEvent = extern struct {
    id1: i64, // Primary ID of the text entity.
    id2: i64, // Secondary ID of the text entity.
    textLength: u32, // Length of the new text string that follows this header.
    _padding: u32, // Padding for alignment.
};

pub const PackedTextureLoadHeaderEvent = extern struct {
    id1: i64, // ID of the sprite this texture is for.
    id2: i64, // Secondary ID.
    filenameLength: u32, // Length of the texture filename that follows this header.
    _padding: u32, // Padding for alignment.
};

pub const PackedUIBeginWindowHeaderEvent = extern struct {
    id: u32, // ImGui Window Id.
    flags: u32, // ImGui Window flags.
    titleLength: u32, // Length of title.
    _padding: u32, // Padding to align header to 16 bytes.
};

pub const PackedUIButtonHeaderEvent = extern struct {
    id: u32, // Unique ID for this button to track clicks.
    w: f32, // Button width (0 for auto).
    h: f32, // Button height (0 for auto).
    labelLength: u32, // Length of the label string that follows.
};

pub const PackedUIEndWindowEvent = extern struct {
    _unused: u8, // Padding to ensure non-zero struct size.
};

pub const PackedUIInteractionEvent = extern struct {
    elementId: u32, // The ID of the element that was clicked.
    interactionType: u32, // Type of interaction (0 = Click, etc).
};

pub const PackedUISetNextWindowPosEvent = extern struct {
    x: f32, // X Position.
    y: f32, // Y Position.
    cond: u32, // ImGuiCond (Always=1, Once=2, FirstUseEver=4).
    pivotX: f32, // Pivot X (0.0=Left, 0.5=Center, 1.0=Right).
    pivotY: f32, // Pivot Y (0.0=Top, 0.5=Center, 1.0=Bottom).
};

pub const PackedUISetNextWindowSizeEvent = extern struct {
    w: f32, // Width.
    h: f32, // Height.
    cond: u32, // ImGuiCond (Always=1, Once=2, FirstUseEver=4).
};

pub const PackedUITextHeaderEvent = extern struct {
    textLength: u32, // Length of the text string that follows.
    _padding: u32, // Padding for alignment.
};

pub const PackedUIWindowClosedEvent = extern struct {
    windowId: u32, // The ID of the window that closed.
};

pub const PackedWindowFlagsEvent = extern struct {
    flags: u64, // Bitmask of window flags.
};

pub const PackedWindowResizeEvent = extern struct {
    w: i32, // New window width.
    h: i32, // New window height.
};

pub const PackedWindowTitleEvent = extern struct {
    title: @Vector(256, u8), // A fixed-size 256-byte NUL-padded string for the title.
};

pub const KVPair = struct { []const u8, u32 };

pub const event_payload_list = [_]KVPair{
    .{ "spriteAdd", @sizeOf(PackedSpriteAddEvent) },
    .{ "spriteRemove", @sizeOf(PackedSpriteRemoveEvent) },
    .{ "spriteMove", @sizeOf(PackedSpriteMoveEvent) },
    .{ "spriteScale", @sizeOf(PackedSpriteScaleEvent) },
    .{ "spriteResize", @sizeOf(PackedSpriteResizeEvent) },
    .{ "spriteRotate", @sizeOf(PackedSpriteRotateEvent) },
    .{ "spriteColor", @sizeOf(PackedSpriteColorEvent) },
    .{ "spriteSpeed", @sizeOf(PackedSpriteSpeedEvent) },
    .{ "spriteTextureLoad", @sizeOf(PackedTextureLoadHeaderEvent) },
    .{ "spriteTextureSet", @sizeOf(PackedSpriteTextureSetEvent) },
    .{ "spriteSetSourceRect", @sizeOf(PackedSpriteSetSourceRectEvent) },
    .{ "geomAddPoint", @sizeOf(PackedGeomAddPointEvent) },
    .{ "geomAddLine", @sizeOf(PackedGeomAddLineEvent) },
    .{ "geomAddRect", @sizeOf(PackedGeomAddRectEvent) },
    .{ "geomAddFillRect", @sizeOf(PackedGeomAddRectEvent) },
    .{ "geomAddPacked", @sizeOf(PackedGeomAddPackedHeaderEvent) },
    .{ "geomRemove", @sizeOf(PackedGeomRemoveEvent) },
    .{ "geomSetColor", @sizeOf(PackedGeomSetColorEvent) },

    // Input Events
    .{ "inputKeyup", @sizeOf(PackedKeyEvent) },
    .{ "inputKeydown", @sizeOf(PackedKeyEvent) },
    .{ "inputMouseup", @sizeOf(PackedMouseButtonEvent) },
    .{ "inputMousedown", @sizeOf(PackedMouseButtonEvent) },
    .{ "inputMousemotion", @sizeOf(PackedMouseMotionEvent) },

    // Window Events
    .{ "windowTitle", @sizeOf(PackedWindowTitleEvent) },
    .{ "windowResize", @sizeOf(PackedWindowResizeEvent) },
    .{ "windowFlags", @sizeOf(PackedWindowFlagsEvent) },

    // Text Events
    .{ "textAdd", @sizeOf(PackedTextAddEvent) },
    .{ "textSetString", @sizeOf(PackedTextSetStringEvent) },

    // Audio Events
    .{ "audioLoad", @sizeOf(PackedAudioLoadEvent) },
    .{ "audioLoaded", @sizeOf(PackedAudioLoadedEvent) },
    .{ "audioPlay", @sizeOf(PackedAudioPlayEvent) },
    .{ "audioStopAll", @sizeOf(PackedAudioStopAllEvent) },
    .{ "audioSetMasterVolume", @sizeOf(PackedAudioSetMasterVolumeEvent) },
    .{ "audioPause", @sizeOf(PackedAudioPauseEvent) },
    .{ "audioStop", @sizeOf(PackedAudioStopEvent) },
    .{ "audioUnload", @sizeOf(PackedAudioUnloadEvent) },
    .{ "audioSetVolume", @sizeOf(PackedAudioSetVolumeEvent) },

    // Physics Events
    .{ "physicsAddBody", @sizeOf(PackedPhysicsAddBodyEvent) },
    .{ "physicsRemoveBody", @sizeOf(PackedPhysicsRemoveBodyEvent) },
    .{ "physicsApplyForce", @sizeOf(PackedPhysicsApplyForceEvent) },
    .{ "physicsApplyImpulse", @sizeOf(PackedPhysicsApplyImpulseEvent) },
    .{ "physicsSetVelocity", @sizeOf(PackedPhysicsSetVelocityEvent) },
    .{ "physicsSetPosition", @sizeOf(PackedPhysicsSetPositionEvent) },
    .{ "physicsSetRotation", @sizeOf(PackedPhysicsSetRotationEvent) },
    .{ "physicsCollisionBegin", @sizeOf(PackedPhysicsCollisionEvent) },
    .{ "physicsCollisionSeparate", @sizeOf(PackedPhysicsCollisionEvent) },
    .{ "physicsSyncTransform", @sizeOf(PackedPhysicsSyncTransformEvent) },
    .{ "physicsSetDebugMode", @sizeOf(PackedPhysicsSetDebugModeEvent) },

    // Plugin Events
    .{ "plugin", @sizeOf(PackedPluginOnEvent) },
    .{ "pluginLoad", @sizeOf(PackedPluginLoadHeaderEvent) },
    .{ "pluginUnload", @sizeOf(PackedPluginUnloadEvent) },
    .{ "pluginSet", @sizeOf(PackedPluginSetEvent) },
    .{ "pluginEventStacking", @sizeOf(PackedPluginEventStackingEvent) },
    .{ "pluginSubscribeEvent", @sizeOf(PackedPluginSubscribeEvent) },
    .{ "pluginUnsubscribeEvent", @sizeOf(PackedPluginUnsubscribeEvent) },

    // Camera Events
    .{ "cameraSetPosition", @sizeOf(PackedCameraSetPositionEvent) },
    .{ "cameraMove", @sizeOf(PackedCameraMoveEvent) },
    .{ "cameraSetZoom", @sizeOf(PackedCameraSetZoomEvent) },
    .{ "cameraSetRotation", @sizeOf(PackedCameraSetRotationEvent) },
    .{ "cameraFollowEntity", @sizeOf(PackedCameraFollowEntityEvent) },
    .{ "cameraStopFollowing", @sizeOf(PackedCameraStopFollowingEvent) },

    // Script Events
    .{ "scriptSubscribe", @sizeOf(PackedScriptSubscribeEvent) },
    .{ "scriptUnsubscribe", @sizeOf(PackedScriptUnsubscribeEvent) },

    // Ui Events
    .{ "uiBeginWindow", @sizeOf(PackedUIBeginWindowHeaderEvent) },
    .{ "uiEndWindow", @sizeOf(PackedUIEndWindowEvent) },
    .{ "uiText", @sizeOf(PackedUITextHeaderEvent) },
    .{ "uiButton", @sizeOf(PackedUIButtonHeaderEvent) },
    .{ "uiSetNextWindowPos", @sizeOf(PackedUISetNextWindowPosEvent) },
    .{ "uiSetNextWindowSize", @sizeOf(PackedUISetNextWindowSizeEvent) },
    .{ "uiElementClicked", @sizeOf(PackedUIInteractionEvent) },
    .{ "uiWindowClosed", @sizeOf(PackedUIWindowClosedEvent) },
};

pub const event_payload_sizes = std.StaticStringMap(u32).initComptime(event_payload_list);

pub const Keycode = struct {
    pub const A: u32 = 97;
    pub const D: u32 = 100;
};

pub const CommandPacker = struct {
    writer: std.ArrayList(u8).Writer,
    command_count: u32 = 0,
